# MQTTap

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
frontend/: index.html  package.json
frontend/src/: App.svelte  chart-utils.js  i18n.js  lib.js  style.css
frontend/src/components/: ChartCard.svelte  ChartModal.svelte  Sidebar.svelte  Topbar.svelte
frontend/src/i18n/: en.json  ru.json
frontend/src/pages/: Chart.svelte  History.svelte  Invites.svelte  Login.svelte  Profile.svelte  Register.svelte  Settings.svelte  Users.svelte
frontend/src/services/: chart-data.js
src/mqttap/: config.py  logging_config.py  security.py
src/mqttap/api/: app.py  auth.py  schemas.py
src/mqttap/db/: core.py  dynamic.py  init.py  schema.py
src/mqttap/services/: mqtt.py  settings.py  storage.py
